--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     <link rel="stylesheet" href="SaSS/main.css">
     <title>OhMyFood</title>
 </head>
+<div class="loader">
+        <div class="loader__1"></div>
+        <div class="loader__2"></div>
+        <div class="loader__3"></div>
+        <div class="loader__4"></div>
+        <div class="loader__5"></div>
+    </div> 
 <body>
+    
     <div class="body__div">
         <nav>
             <div class="nav__image">
