--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     <link rel="stylesheet" href="SaSS/main.css">
     <title>OhMyFood</title>
 </head>
-<div class="loader">
-        <div class="loader__1"></div>
-        <div class="loader__2"></div>
-        <div class="loader__3"></div>
-        <div class="loader__4"></div>
-        <div class="loader__5"></div>
-    </div> 
+ 
 <body>
+    <div class="loader">
+        <div class="loader__bar loader__1"></div>
+        <div class="loader__bar loader__2"></div>
+        <div class="loader__bar loader__3"></div>
+        <div class="loader__bar loader__4"></div>
+        <div class="loader__bar loader__5"></div>   
+    </div>
     
     <div class="body__div">
         <nav>
@@ -43,10 +44,28 @@
 
                     <h2 class="fonctionnement__title">Fonctionnement</h2>
 
-                <div class="fonction__desktop">
-                    <p class="fonctionnement__list"><span class="fonctionnement__number">1</span><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</p>
-                    <p class="fonctionnement__list"><span class="fonctionnement__number">2</span><i class="fa-solid fa-list"></i>Composez votre menu</p>
-                    <p class="fonctionnement__list"><span class="fonctionnement__number">3</span><i class="fa-solid fa-store"></i>Dégustez au restaurant</p>
+                <div class="fonctionnement__desktop">
+                    <div class="fonctionnement__list">
+                        <span class="fonctionnement__number">1</span>
+                            <p class="fonctionnement__txt">
+                                <i class="fa-solid fa-mobile-screen-button"></i>
+                                Choisissez un restaurant
+                            </p>
+                    </div>
+                    <div class="fonctionnement__list">
+                        <span class="fonctionnement__number">2</span>
+                            <p class="fonctionnement__txt">
+                                <i class="fa-solid fa-list"></i>
+                                Composez votre menu
+                            </p>
+                    </div>
+                    <div class="fonctionnement__list">
+                        <span class="fonctionnement__number">3</span>
+                            <p class="fonctionnement__txt">
+                                <i class="fa-solid fa-store"></i>
+                                Dégustez au restaurant
+                            </p>
+                    </div>
                 </div>
             </section>
             <div class="restaurant">
@@ -54,10 +73,13 @@
                     <div class="restaurant__title">
                         <h2>Restaurants</h2>
                     </div>
-                    <div class="restaurant__list">
+                    <div class="restaurant__list">   
                         <div class="restaurant__cards">
                                 <article>
-                                    <a href="restaurants/palette.html"><img src="assets/Images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"></a>
+                                    <span class="restaurant__new"><p>Nouveau</p></span>
+                                    <a href="restaurants/palette.html">
+                                        <img src="assets/Images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                                    </a>
                                     <div class="restaurant__nom">
                                         <div class="restaurant__content">
                                             <h3>La palette du goût</h3>
@@ -73,6 +95,7 @@
 
                         <div class="restaurant__cards petit" id="note">
                                 <article>
+                                    <span class="restaurant__new"><p>Nouveau</p></span>
                                     <a href="Restaurants/note.html"><img src="assets/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée"></a>
                                     <div class="restaurant__nom">
                                         <div class="restaurant__content">
